--- a/app/assets/sass/dri/dri_layouts.scss
+++ b/app/assets/sass/dri/dri_layouts.scss
@@ -210,7 +210,7 @@
   }	
   
   .dri_collection_institutes_pages_text {
-        @include zen-grid-item(1, 2.75, $gutter-width: 0px);
+        @include zen-grid-item(2.5, 2.5, $gutter-width: 0px);
   }
 
 }
